--- a/debian32-stlinux24/Dockerfile
+++ b/debian32-stlinux24/Dockerfile
@@ -1,6 +1,8 @@
 FROM 32bit/debian:jessie
 RUN rm -f /etc/localtime && ln -s /usr/share/zoneinfo/Asia/Taipei /etc/localtime
-RUN apt-get update && apt-get upgrade && apt-get install -y \
+RUN apt-get update -y
+RUN apt-get upgrade -y
+RUN apt-get install -y \
 	curl \
 	debfoster \
 	deborphan \
@@ -16,15 +18,15 @@ RUN wget -q -O /tmp/x.rpm http://download.stlinux.com/pub/stlinux/2.4/misc/$(gre
 RUN rpm -ivh --force-debian /tmp/x.rpm
 
 # 2015/04/14 workaround for stmyum update fail problem
-RUN wget -q -O /tmp/k.rpm http://download.stlinux.com/pub/stlinux/2.4/updates/RPMS/host/stlinux24-host-kernel-source-sh4-2.6.32.61_stm24_0215-215.noarch.rpm \
-  && wget -q -O /tmp/f.rpm http://download.stlinux.com/pub/stlinux/2.4/STLinux/host/stlinux24-host-filesystem-1.0-7.noarch.rpm \
-  && rpm -Uvh /tmp/k.rpm /tmp/f.rpm
+#RUN wget -q -O /tmp/k.rpm http://download.stlinux.com/pub/stlinux/2.4/updates/RPMS/host/stlinux24-host-kernel-source-sh4-2.6.32.61_stm24_0215-215.noarch.rpm \
+#  && wget -q -O /tmp/f.rpm http://download.stlinux.com/pub/stlinux/2.4/STLinux/host/stlinux24-host-filesystem-1.0-7.noarch.rpm \
+#  && rpm -Uvh /tmp/k.rpm /tmp/f.rpm
 
-ADD wget -q -O /tmp/install http://download.stlinux.com/pub/stlinux/2.4/install
-RUN bash /tmp/install -u all-sh4-glibc
+#ADD wget -q -O /tmp/install http://download.stlinux.com/pub/stlinux/2.4/install
+#RUN bash /tmp/install -u all-sh4-glibc
 # cache file puts in /opt/STM/STLinux-2.4/host/var/cache/yum/STLinux_Distribution/packages/
 
-RUN /opt/STM/STLinux-2.4/host/bin/stmyum update -y
-RUN /opt/STM/STLinux-2.4/host/bin/stmyum clearn dbcache packages
-RUN apt-get clean
-RUN rm -R /tmp/*
+#RUN /opt/STM/STLinux-2.4/host/bin/stmyum update -y
+#RUN /opt/STM/STLinux-2.4/host/bin/stmyum clearn dbcache packages
+#RUN apt-get clean
+#RUN rm -R /tmp/*
