--- a/debian32-stlinux24/Dockerfile
+++ b/debian32-stlinux24/Dockerfile
@@ -1,5 +1,8 @@
 FROM 32bit/debian:jessie
+# use GMT+8 as localtime
 RUN rm -f /etc/localtime && ln -s /usr/share/zoneinfo/Asia/Taipei /etc/localtime
+
+# install basic rpm required packages
 RUN apt-get update -y
 RUN apt-get upgrade -y
 RUN apt-get install -y \
@@ -12,21 +15,30 @@ RUN apt-get install -y \
 	rpm \
 	tmux
 
+# use bash instead of sh
 RUN ln -sf bash /bin/sh
-RUN wget -q -O /tmp/1 http://download.stlinux.com/pub/stlinux/2.4/misc/
-RUN wget -q -O /tmp/x.rpm http://download.stlinux.com/pub/stlinux/2.4/misc/$(grep rpm /tmp/1|tail -1|awk -F'>' '{print $3}' | awk -F'<' '{print $1}')
-RUN rpm -ivh --force-debian /tmp/x.rpm
 
-# 2015/04/14 workaround for stmyum update fail problem
-#RUN wget -q -O /tmp/k.rpm http://download.stlinux.com/pub/stlinux/2.4/updates/RPMS/host/stlinux24-host-kernel-source-sh4-2.6.32.61_stm24_0215-215.noarch.rpm \
-#  && wget -q -O /tmp/f.rpm http://download.stlinux.com/pub/stlinux/2.4/STLinux/host/stlinux24-host-filesystem-1.0-7.noarch.rpm \
-#  && rpm -Uvh /tmp/k.rpm /tmp/f.rpm
+# get newest depdency rpms
+ENV DL http://download.stlinux.com/pub/stlinux/2.4
+RUN curl -o /tmp/deps.rpm $DL/misc/$(curl $DL/misc/ \
+  | grep rpm |tail -1|awk -F'>' '{print $3}' \
+  | awk -F'<' '{print $1}') 
+RUN rpm -ivh --force-debian /tmp/deps.rpm
 
-#ADD wget -q -O /tmp/install http://download.stlinux.com/pub/stlinux/2.4/install
-#RUN bash /tmp/install -u all-sh4-glibc
+
+# 2015/04/16 workaround for 'install all-sh4-glibc' script
+RUN curl -o /tmp/ks.rpm $DL/updates/RPMS/host/stlinux24-host-kernel-source-sh4-2.6.32.61_stm24_0215-215.noarch.rpm
+RUN rpm -Uvh /tmp/ks.rpm
+
+RUN curl -o /tmp/install $DL/install && bash -x /tmp/install -u all-sh4-glibc
+
+RUN curl -o /tmp/ulkh.rpm $DL/STLinux/sh4_uclibc/stlinux24-sh4_uclibc-linux-kernel-headers-2.6.32.10_stm24_0201-42.noarch.rpm
+RUN rpm -Uvh /tmp/ulkh.rpm
+
+RUN bash -x /tmp/install -u all-sh4-uclibc
+RUN /opt/STM/STLinux-2.4/host/bin/stmyum update -y
+
 # cache file puts in /opt/STM/STLinux-2.4/host/var/cache/yum/STLinux_Distribution/packages/
-
-#RUN /opt/STM/STLinux-2.4/host/bin/stmyum update -y
-#RUN /opt/STM/STLinux-2.4/host/bin/stmyum clearn dbcache packages
-#RUN apt-get clean
-#RUN rm -R /tmp/*
+RUN /opt/STM/STLinux-2.4/host/bin/stmyum clearn dbcache packages
+RUN apt-get clean
+RUN rm -R /tmp/*
