--- a/debian32-stlinux24/Dockerfile
+++ b/debian32-stlinux24/Dockerfile
@@ -29,7 +29,9 @@ RUN rpm -ivh --force-debian /tmp/deps.rpm
 # 2015/04/16 workaround for 'install all-sh4-glibc' script
 RUN curl -o /tmp/ks.rpm $DL/updates/RPMS/host/stlinux24-host-kernel-source-sh4-2.6.32.61_stm24_0215-215.noarch.rpm
 RUN curl -o /tmp/fs.rpm $DL/STLinux/host/stlinux24-host-filesystem-1.0-7.noarch.rpm
-RUN rpm -Uvh /tmp/fs.rpm && rpm -Uvh /tmp/ks.rpm
+RUN curl -o /tmp/ks.rpm $DL/updates/RPMS/host/stlinux24-host-kernel-source-sh4-2.6.32.61_stm24_0215-215.noarch.rpm
+RUN curl -o /tmp/lkh.rpm $DL/updates/RPMS/sh4/stlinux24-sh4-linux-kernel-headers-2.6.32.46-48.noarch.rpm
+RUN rpm -Uvh /tmp/fs.rpm && rpm -Uvh /tmp/ks.rpm && rpm -Uvh /tmp/lkh.rpm
 
 RUN curl -o /tmp/install $DL/install && bash -x /tmp/install -u all-sh4-glibc
 
