--- a/debian32-stlinux24/Dockerfile
+++ b/debian32-stlinux24/Dockerfile
@@ -1,3 +1,4 @@
+# Dockerfile put in https://github.com/dlintw/sh4twbox-build-env
 FROM 32bit/debian:jessie
 # use GMT+8 as localtime
 RUN rm -f /etc/localtime && ln -s /usr/share/zoneinfo/Asia/Taipei /etc/localtime
