--- a/stlinux24-sh4-uclibc/Dockerfile
+++ b/stlinux24-sh4-uclibc/Dockerfile
@@ -17,7 +17,6 @@ RUN apt-get install -y \
 	tmux
 
 RUN apt-get clean
-
 # use bash instead of sh
 RUN ln -sf bash /bin/sh
 
@@ -32,15 +31,10 @@ RUN rpm -ivh --force-debian /tmp/deps.rpm
 # 2015/04/16 workaround for 'install all-sh4-glibc' script
 RUN curl -o /tmp/ks.rpm $DL/updates/RPMS/host/stlinux24-host-kernel-source-sh4-2.6.32.61_stm24_0215-215.noarch.rpm
 RUN curl -o /tmp/fs.rpm $DL/STLinux/host/stlinux24-host-filesystem-1.0-7.noarch.rpm
-RUN curl -o /tmp/lkh.rpm $DL/updates/RPMS/sh4/stlinux24-sh4-linux-kernel-headers-2.6.32.46-48.noarch.rpm
-RUN rpm -Uvh /tmp/fs.rpm && rpm -Uvh /tmp/ks.rpm && rpm -Uvh /tmp/lkh.rpm
-
-RUN curl -o /tmp/install $DL/install && bash -x /tmp/install -u all-sh4-glibc
-RUN /opt/STM/STLinux-2.4/host/bin/stmyum clean dbcache packages
-
+#RUN curl -o /tmp/lkh.rpm $DL/updates/RPMS/sh4/stlinux24-sh4-linux-kernel-headers-2.6.32.46-48.noarch.rpm
 # $DL/updates/RPMS/sh4_uclibc/stlinux24-sh4_uclibc-linux-kernel-headers-2.6.32.46-48.noarch.rpm
 RUN curl -o /tmp/ulkh.rpm $DL/STLinux/sh4_uclibc/stlinux24-sh4_uclibc-linux-kernel-headers-2.6.32.10_stm24_0201-42.noarch.rpm
-RUN rpm -Uvh /tmp/ulkh.rpm
+RUN rpm -Uvh /tmp/fs.rpm && rpm -Uvh /tmp/ks.rpm && rpm -Uvh /tmp/ulkh.rpm
 
 RUN bash -x /tmp/install -u all-sh4-uclibc
 RUN /opt/STM/STLinux-2.4/host/bin/stmyum update -y
