--- a/stlinux24-sh4-uclibc/Dockerfile
+++ b/stlinux24-sh4-uclibc/Dockerfile
@@ -1,4 +1,5 @@
 # Dockerfile put in https://github.com/dlintw/sh4twbox-build-env
+MAINTAINER Daniel YC Lin <dlin.tw at gmail>
 FROM 32bit/debian:jessie
 # use GMT+8 as localtime
 RUN rm -f /etc/localtime && ln -s /usr/share/zoneinfo/Asia/Taipei /etc/localtime
