--- a/stlinux24-sh4-glibc/Dockerfile
+++ b/stlinux24-sh4-glibc/Dockerfile
@@ -43,3 +43,7 @@ RUN curl -o /tmp/install $DL/install \
   && /opt/STM/STLinux-2.4/host/bin/stmyum clean dbcache packages
 
 RUN rm -R /tmp/*
+RUN apt-get install -y vim git make \
+  && apt-get clean
+RUN apt-get install -y gcc \
+  && apt-get clean
