setup PATH for stlinux 2.4

--- a/stlinux24-sh4-glibc/Dockerfile
+++ b/stlinux24-sh4-glibc/Dockerfile
@@ -48,3 +48,5 @@ RUN curl -o /tmp/install $DL/install \
   && /opt/STM/STLinux-2.4/host/bin/stmyum update -y \
   && /opt/STM/STLinux-2.4/host/bin/stmyum clean dbcache packages \
   && rm -f /tmp/*rpm
+
+ENV /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/STM/STLinux-2.4/host/bin:/opt/STM/STLinux-2.4/devkit/sh4/bin
