--- a/centos-stlinux24/Dockerfile
+++ b/centos-stlinux24/Dockerfile
@@ -1,39 +1,42 @@
-# Sorry, this is out of date and can not build successful anymore.
-# Usage
-# =====
-# # assume /tmp/root is your shared directory with this docker
-# # assume 20022 is your ssh port for this docker, password: root
-# docker run -d -v /tmp/root:/root -p 20022:22 dlin/centos-stlinux24
-# ssh -p 20022 root@localhost
-
-#FROM toopher/centos-i386:centos6
+# Dockerfile put in https://github.com/dlintw/sh4twbox-build-env
 FROM centos
 MAINTAINER Daniel YC Lin <dlin.tw at gmail>
+# use GMT+8 as localtime
 RUN rm -f /etc/localtime && ln -s /usr/share/zoneinfo/Asia/Taipei /etc/localtime
-# if want to force use Taiwan mirror
-# ref: http://www.phcno1.net/modules/tad_book3/page.php?tbdsn=538
 
-RUN yum update -y
+# install basic rpm required packages and clean cache
+RUN yum update -y && yum install -y \
+	cscope \
+	curl \
+	gcc-c++ \
+	git \
+	make \
+	tmux \
+	vim \
+	wget \
+	which \
+  && apt-get clean
 
-RUN yum install -y git unzip subversion openssh-server \
-	gcc-c++ make readline-devel which unzip
+ENV DL http://download.stlinux.com/pub/stlinux/2.4
+# get newest depdency rpms
+#RUN curl -o /tmp/deps.rpm $DL/misc/$(curl $DL/misc/ \
+#  | grep rpm |tail -1|awk -F'>' '{print $3}' \
+#  | awk -F'<' '{print $1}') 
+#RUN rpm -ivh --force-debian /tmp/deps.rpm
 
-RUN yum install -y wget
+# 2015/04/23 try to get 3.4 headers directly
+## 2015/04/16 workaround for 'install all-sh4-glibc' script
+#RUN curl -o /tmp/ks.rpm $DL/updates/RPMS/host/stlinux24-host-kernel-source-sh4-2.6.32.61_stm24_0215-215.noarch.rpm
+#RUN curl -o /tmp/fs.rpm $DL/STLinux/host/stlinux24-host-filesystem-1.0-7.noarch.rpm
+#RUN curl -o /tmp/lkh.rpm $DL/updates/RPMS/sh4/stlinux24-sh4-linux-kernel-headers-2.6.32.46-48.noarch.rpm
+#RUN rpm -Uvh /tmp/fs.rpm && rpm -Uvh /tmp/ks.rpm && rpm -Uvh /tmp/lkh.rpm
 
-#RUN wget -O /tmp/fossil.zip http://www.fossil-scm.org/download/fossil-linux-x86-20140127173344.zip
-#RUN unzip -d /usr/bin /tmp/fossil.zip
+# install & clean cache
+# cache file puts in /opt/STM/STLinux-2.4/host/var/cache/yum/STLinux_Distribution/packages/
+RUN curl -o /tmp/install $DL/install \
+  && bash -x /tmp/install -u all-sh4-glibc \
+  && /opt/STM/STLinux-2.4/host/bin/stmyum update -y \
+  && /opt/STM/STLinux-2.4/host/bin/stmyum clean dbcache packages \
+  && rm -f /tmp/*rpm
 
-#RUN /etc/init.d/sshd start
-RUN echo 'root:root' | chpasswd
-
-#RUN wget -O /tmp/install http://ftp.stlinux.com/pub/stlinux/2.4/install
-RUN curl -o /tmp/install http://ftp.stlinux.com/pub/stlinux/2.4/install
-RUN bash /tmp/install all-sh4-glibc
-# cache file puts in /var/cache/yum/x86_64/6/STLinux_Distribution_Updates/packages/
-
-RUN yum clean packages dbcache
-RUN /opt/STM/STLinux-2.4/host/bin/stmyum clean dbcache packages
-RUN rm -R /tmp/*
-
-#ENTRYPOINT ["/usr/sbin/sshd", "-D"]
-EXPOSE 22
+ENV PATH /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/STM/STLinux-2.4/host/bin:/opt/STM/STLinux-2.4/devkit/sh4/bin
